--- a/vignettes/DEMutilities.Rmd
+++ b/vignettes/DEMutilities.Rmd
@@ -44,7 +44,7 @@ you should save them somewhere that makes sense, like the same directory as
 the DEM. 
 
 ```{r calculate-metrics}
-DEM_path <- system.file("data/elev_scottsburg.tif", 
+DEM_path <- system.file("examples/elev_scottsburg.tif", 
                         package = "TerrainWorksUtils")
 output_dir <- tempdir()
 metrics <- c("plan", "grad", "prof")
