snake_case-d vignette

--- a/vignettes/create_training_data.Rmd
+++ b/vignettes/create_training_data.Rmd
@@ -46,7 +46,7 @@ prof <- rast(file.path(data_path, "prof_15.tif"))
 dev <- rast(file.path(data_path, "dev_15.tif"))
 pca <- rast(file.path(data_path, "pca_15m_48hr.tif"))
 
-varsRaster <- c(
+vars_raster <- c(
   grad,
   plan,
   prof,
@@ -72,31 +72,31 @@ function `createAnalysisRegionMask` to filter our analysis region to only
 include cells which already contain reasonable values for landslides to occur. 
 
 ```{r analysisRegionMask}
-analysisRegionMask <- createAnalysisRegionMask(
-  varsRaster, 
+analysis_region_mask <- createAnalysisRegionMask(
+  vars_raster, 
   initiation_points, 
   maskVars = c("grad_15", "plan_15", "prof_15"), 
   expansionFactor = 1
 )
-plot(analysisRegionMask)
+plot(analysis_region_mask)
 ```
 
 Now that we have specified our analysis region, we can create our training 
 data. 
 
 ```{r create-training-data}
-allPoints <- sampleNegativePoints(
+all_points <- sample_negative_points(
   initiation_points, 
-  analysisRegion = analysisRegionMask
+  analysis_region = analysis_region_mask
 )
-trainingPoints <- extractValues(
-  varsRaster, 
-  allPoints, 
-  extractionMethod = "centroid", 
-  returnType = "points"
+training_points <- extract_values(
+  vars_raster, 
+  all_points, 
+  extraction_method = "centroid", 
+  return_type = "points"
 )
 plot(elev)
-points(trainingPoints, col = ifelse(trainingPoints$class == "positive", 
+points(training_points, col = ifelse(training_points$class == "positive", 
                                     "black", 
                                     "red")
          )
