--- a/dev/sample_points_analysis.Rmd
+++ b/dev/sample_points_analysis.Rmd
@@ -10,10 +10,10 @@ library(terra)
 
 data_path <- system.file("elev_scottsburg", package = "TerrainWorksUtils")
 elev <- rast(file.path(data_path, "elev_scottsburg.flt"))
-grad <- rast(file.path(data_path, "grad_40.tif"))
-plan <- rast(file.path(data_path, "plan_40.tif"))
-prof <- rast(file.path(data_path, "prof_40.tif"))
-dev <- rast(file.path(data_path, "dev_40.tif"))
+grad <- rast(file.path(data_path, "grad_15.tif"))
+plan <- rast(file.path(data_path, "plan_15.tif"))
+prof <- rast(file.path(data_path, "prof_15.tif"))
+dev <- rast(file.path(data_path, "dev_15.tif"))
 #pca <- rast(file.path(data_path, "pca_15m_48hr.tif"))
 
 vars_raster <- c(
@@ -32,7 +32,7 @@ Next, we need to establish our negative regions and sample negative points.
 
 training_data <- create_training_data_with_buffer(initiation_points, 
                                                   vars_raster, 
-                                                  pos_buffer = 15, 
+                                                  pos_buffer = 11, 
                                                   neg_buffer = 150)
 ```
 
@@ -41,9 +41,9 @@ And generate histograms for the distributions between different points.
 ```{r}
 
 
-sample_point_plots(training_data, 
-                   c("dev_40", "grad_40", "plan_40", "prof_40"),
-                   plot_type = "density")
+plot_metric_distribution(training_data, 
+                         c("dev_15", "grad_15", "plan_15", "prof_15"),
+                         plot_type = "den")
 ```
 
 We also want to look at the distributions from the entire positive and negative 
@@ -53,12 +53,12 @@ then extract values and plot it.
 ```{r}
 
 pos_region = pos_region <- terra::buffer(initiation_points,
-                              width = 15 * 2)
+                              width = 11 * 2)
 pos_region <- terra::aggregate(pos_region)
 
 neg_region <- make_neg_region(initiation_points,
                               vars_raster,
-                              15,
+                              11,
                               150,
                               return_raster = FALSE)
 
@@ -77,8 +77,8 @@ neg_region_data$class <- "negative"
 And now graph these. 
 
 ```{r}
-sample_point_plots(rbind(pos_region_data, neg_region_data), 
-                   c("dev_40", "grad_40", "plan_40", "prof_40"), 
-                   plot_type = "density")
+plot_metric_distribution(rbind(pos_region_data, neg_region_data), 
+                         c("dev_40", "grad_40", "plan_40", "prof_40"), 
+                         plot_type = "den")
 ```
 
