--- a/analysis/02_training_data_plots.Rmd
+++ b/analysis/02_training_data_plots.Rmd
@@ -1,7 +1,10 @@
-### Analyze the training data produced to assess the negative sampling strategy. 
+# Analyze the training data produced to assess the negative sampling strategy. 
+
 Here we investigate how the sampling strategy works to create useful input data for model generation. 
 
 First, load the elevation derivatives. These are calculate in (00) generate_elev_derivatives. 
+
+Replace data_path as needed.
 
 ```{r}
 data_path <- "\\\\Mac/Home/Documents/terrainworks/code/sandbox/data/DeanCr/"
@@ -35,6 +38,7 @@ vars_raster <- c(
 initiation_points <- vect(file.path(data_path, "initiation_points.shp"))
 ```
 
+Generate the negative region and analysis mask for visualization. 
 
 ```{r}
 neg_region <- make_neg_region(initiation_points, 
@@ -71,6 +75,10 @@ training_data <- create_training_data_with_buffer(
 
 ```
 
+Plot the distributions of elevation derivatives for positive points vs. negative
+sampled points. The positive distribution is shown in black and the negative 
+points are shown in red. 
+
 ```{r}
 cols = c("grad_15", "plan_15", "prof_15", "norm_15", "tan_15", "mean_15", "pca_k1_d5", "pca_k1_d10", "pca_k1_d20")
 plot_metric_distribution(training_data,
@@ -78,12 +86,16 @@ plot_metric_distribution(training_data,
                          plot_type = 'den')
 ```
 
+Extract values for the entire negative region. 
+
 ```{r}
 
 neg_reg <- terra::extract(vars_raster, as.polygons(neg_region))
 
 ```
 
+Plot the distribution of elevation derivatives for the entire negative region 
+vs sampled points within the negative region. 
 
 ```{r}
 # define visual aspects of the plot
@@ -96,26 +108,21 @@ column = "plan_15"
 
 for (column in cols) {
   
-      d_reg <- density(neg_reg[, column], n = 1024, na.rm = TRUE)
-      d_pts <- density(training_data[which(training_data$class == "negative"), column], n = 1024) 
+    d_reg <- density(neg_reg[, column], n = 1024, na.rm = TRUE)
+    d_pts <- density(training_data[which(training_data$class == "negative"), column], n = 1024) 
 
+    
+    plot(d_reg,
+         main = paste0("Distribution of ", column),
+         xlab = column,
+         col = blk,
+         ylim = c(0, max(c(d_reg$y, d_pts$y))),
+         xlim = c(min(d_pts$x), quantile(d_pts$x, probs = c(.95))))
+         # xlim = c(min(d_))
+    polygon(d_reg, col = blk)
+    polygon(d_pts, col = red)
       
-      plot(d_reg,
-           main = paste0("Distribution of ", column),
-           xlab = column,
-           col = blk,
-           ylim = c(0, max(c(d_reg$y, d_pts$y))),
-           xlim = c(min(d_pts$x), quantile(d_pts$x, probs = c(.95))))
-           # xlim = c(min(d_))
-      polygon(d_reg, col = blk)
-      polygon(d_pts, col = red)
-      
-      # for (iter in neg_pts) {
-      #   d_pts <- density(neg_pts[, "grad_15"], n = 1024)
-      #   polygon(d_pts, col = red)
-      # }
-      
-    }
+}
 
 ```
 
