--- a/analysis/02_training_data_plots.Rmd
+++ b/analysis/02_training_data_plots.Rmd
@@ -7,17 +7,19 @@ First, load the elevation derivatives. These are calculate in (00) generate_elev
 Replace data_path as needed.
 
 ```{r}
-data_path <- "\\\\Mac/Home/Documents/terrainworks/code/sandbox/data/DeanCr/"
+# data_path <- "/Users/julialober/Documents/terrainworks/code/sandbox/data/DeanCr"
+data_path <- "\\\\Mac/Home/Documents/terrainworks/code/sandbox/data/scottsburg"
 
-elev <- rast(file.path(data_path, "elev_deancr.flt"))
-grad <- rast(file.path(data_path, "deriv/grad_15.flt"))
-plan <- rast(file.path(data_path, "deriv/plan_15.flt"))
-prof <- rast(file.path(data_path, "deriv/prof_15.flt"))
-norm <- rast(file.path(data_path, "deriv/norm_15.flt"))
-tan <- rast(file.path(data_path, "deriv/tan_15.flt"))
-pca_5 <- rast(file.path(data_path, "deriv/pca_k1_d5.flt"))
-pca_10 <- rast(file.path(data_path, "deriv/pca_k1_d10.flt"))
-pca_20 <- rast(file.path(data_path, "deriv/pca_k1_d20.flt"))
+
+elev <- terra::rast(file.path(data_path, "elev_scottsburg.flt"))
+grad <- rast(file.path(data_path, "grad_15.flt"))
+plan <- rast(file.path(data_path, "plan_15.flt"))
+prof <- rast(file.path(data_path, "prof_15.flt"))
+norm <- rast(file.path(data_path, "norm_15.flt"))
+tan <- rast(file.path(data_path, "tan_15.flt"))
+pca_5 <- rast(file.path(data_path, "pca_k1_d5.flt"))
+pca_10 <- rast(file.path(data_path, "pca_k1_d10.flt"))
+pca_20 <- rast(file.path(data_path, "pca_k1_d20.flt"))
 
 #calculate mean slopes
 mean <- (norm + tan) / 2
@@ -67,7 +69,7 @@ training_data <- create_training_data_with_buffer(
   predictors_raster = vars_raster,
   pos_buffer = 11,
   neg_buffer = 150,
-  analysis_region_mask = analysis_mask,
+  analysis_region_mask = NULL,
   negative_proportion = 1,
   extraction_method = "centroid",
   extraction_layer = NULL,
