--- a/analysis/02_training_data_plots.Rmd
+++ b/analysis/02_training_data_plots.Rmd
@@ -7,19 +7,18 @@ First, load the elevation derivatives. These are calculate in (00) generate_elev
 Replace data_path as needed.
 
 ```{r}
-# data_path <- "/Users/julialober/Documents/terrainworks/code/sandbox/data/DeanCr"
-data_path <- "\\\\Mac/Home/Documents/terrainworks/code/sandbox/data/scottsburg"
+data_path <- "\\\\Mac/Home/Documents/terrainworks/code/sandbox/data/DeanCr"
+# data_path <- "\\\\Mac/Home/Documents/terrainworks/code/sandbox/data/scottsburg"
 
-
-elev <- terra::rast(file.path(data_path, "elev_scottsburg.flt"))
-grad <- rast(file.path(data_path, "grad_15.flt"))
-plan <- rast(file.path(data_path, "plan_15.flt"))
-prof <- rast(file.path(data_path, "prof_15.flt"))
-norm <- rast(file.path(data_path, "norm_15.flt"))
-tan <- rast(file.path(data_path, "tan_15.flt"))
-pca_5 <- rast(file.path(data_path, "pca_k1_d5.flt"))
-pca_10 <- rast(file.path(data_path, "pca_k1_d10.flt"))
-pca_20 <- rast(file.path(data_path, "pca_k1_d20.flt"))
+elev <- terra::rast(file.path(data_path, "elev_deancr.flt"))
+grad <- rast(file.path(data_path, "deriv/grad_15.flt"))
+plan <- rast(file.path(data_path, "deriv/plan_15.flt"))
+prof <- rast(file.path(data_path, "deriv/prof_15.flt"))
+norm <- rast(file.path(data_path, "deriv/norm_15.flt"))
+tan <- rast(file.path(data_path, "deriv/tan_15.flt"))
+pca_5 <- rast(file.path(data_path, "deriv/pca_k1_d5.flt"))
+pca_10 <- rast(file.path(data_path, "deriv/pca_k1_d10.flt"))
+pca_20 <- rast(file.path(data_path, "deriv/pca_k1_d20.flt"))
 
 #calculate mean slopes
 mean <- (norm + tan) / 2
@@ -37,7 +36,7 @@ vars_raster <- c(
   pca_20
 )
 
-initiation_points <- vect(file.path(data_path, "initiation_points.shp"))
+initiation_points <- vect(file.path(data_path, "DeanCr_Initiation_Points.shp"))
 ```
 
 Generate the negative region and analysis mask for visualization. 
@@ -82,10 +81,79 @@ sampled points. The positive distribution is shown in black and the negative
 points are shown in red. 
 
 ```{r}
+plot_metric_distribution <- function(training_data,
+                                     parameters = NULL,
+                                     plot_type = "hist") {
+
+  if (!(plot_type %in% c("hist", "den"))) {
+    stop("Plot type must be either \"hist\" (histogram) or \"den\" (density)")
+  }
+
+  # separate out the positive and negative data
+  positive_data <- training_data[which(training_data$class == "positive"), ]
+  negative_data <- training_data[which(training_data$class == "negative"), ]
+
+  if (is.null(parameters)) {
+    parameters = names(training_data)
+  }
+
+  # define visual aspects of the plot
+  num_parameters = length(parameters)
+  par(mfrow = c(ceiling(num_parameters / 3), 3), mar = c(2, 2, 1, 1),
+      oma = c(2,1,1,1))
+
+  blk <- rgb(0, 0, 0, max = 255, alpha = 80)
+  red <- rgb(227, 60, 57, max = 255, alpha = 80)
+
+  if (plot_type == "hist") {
+    for (p in parameters) {
+      # use consistent buckets for the histograms
+      buckets = seq(min(training_data[, p], na.rm = TRUE),
+                    max(training_data[, p], na.rm = TRUE),
+                    length.out = 20)
+
+      if (plot_type == "hist") {
+        h_pos <- hist(positive_data[, p], breaks = buckets, plot = FALSE)
+        h_neg <- hist(negative_data[, p], breaks = buckets, plot = FALSE)
+        plot(h_neg, xlab = p,
+             main = paste0("Distribution of ", p),
+             col = red,
+             ylim = c(0, max(c(h_pos$counts, h_neg$counts))))
+        plot(h_pos, col = blk,
+             add = TRUE)
+      }
+    }
+    } else {
+      for (p in parameters) {
+        d_pos <- density(positive_data[, p], n = 1024)
+        d_neg <- density(negative_data[, p], n = 1024)
+        plot(d_pos,
+             main = paste0("Distribution of ", p),
+             xlab = p,
+             col = blk,
+             ylim = c(0, max(c(d_pos$y, d_neg$y))))
+        polygon(d_pos, col = blk)
+        polygon(d_neg, col = red)
+      }
+      # plot(1, type = "n", axes=FALSE, xlab="", ylab="")
+      # plot_colors <- c(rgb(0, 0, 0, max = 255), rgb(227, 60, 57, max = 255))
+      # legend(x = "top",inset = 0,
+      #        legend = c("Positive points", "Negative points"), 
+      #        col=plot_colors, lwd=5, cex=.5, horiz = TRUE)
+      
+      par(fig = c(0, 1, 0, 1), oma = c(0, 0, 0, 0), mar = c(0, 0, 0, 0), new = TRUE)
+      plot(0, 0, type = 'l', bty = 'n', xaxt = 'n', yaxt = 'n')
+      legend('bottom',legend = c("Positive points", "Negative points"), 
+             col = c(rgb(0, 0, 0, max = 255), rgb(227, 60, 57, max = 255)), 
+             lwd = 5, xpd = TRUE, horiz = TRUE, cex = 1, seg.len=1, bty = 'n')
+  }
+}
+
 cols = c("grad_15", "plan_15", "prof_15", "norm_15", "tan_15", "mean_15", "pca_k1_d5", "pca_k1_d10", "pca_k1_d20")
 plot_metric_distribution(training_data,
                          parameters = cols,
                          plot_type = 'den')
+
 ```
 
 Extract values for the entire negative region. 
@@ -102,7 +170,8 @@ vs sampled points within the negative region.
 ```{r}
 # define visual aspects of the plot
 num_parameters = length(cols)
-par(mfrow = c(ceiling(num_parameters / 3), 3))
+par(mfrow = c(ceiling(num_parameters / 3), 3), mar = c(2, 2, 1, 1),
+      oma = c(2,1,1,1))
 blk <- rgb(0, 0, 0, max = 255, alpha = 80)
 red <- rgb(227, 60, 57, max = 255, alpha = 80)
 
@@ -112,10 +181,13 @@ for (column in cols) {
   
     d_reg <- density(neg_reg[, column], n = 1024, na.rm = TRUE)
     d_pts <- density(training_data[which(training_data$class == "negative"), column], n = 1024) 
+    
+    suppressWarnings(res <- ks.test(training_data[which(training_data$class == "negative"), column], 
+                   neg_reg[, column]))
 
     
     plot(d_reg,
-         main = paste0("Distribution of ", column),
+         main = paste0("Distribution of ", column, "(p = ", format(round(res$p.value, 3), nsmall = 3), ")"),
          xlab = column,
          col = blk,
          ylim = c(0, max(c(d_reg$y, d_pts$y))),
@@ -125,6 +197,12 @@ for (column in cols) {
     polygon(d_pts, col = red)
       
 }
+
+par(fig = c(0, 1, 0, 1), oma = c(0, 0, 0, 0), mar = c(0, 0, 0, 0), new = TRUE)
+plot(0, 0, type = 'l', bty = 'n', xaxt = 'n', yaxt = 'n')
+legend('bottom',legend = c("Negative region", "Sampled negative points"), 
+       col = c(rgb(0, 0, 0, max = 255), rgb(227, 60, 57, max = 255)), 
+       lwd = 5, xpd = TRUE, horiz = TRUE, cex = 1, seg.len=1, bty = 'n')
 
 ```
 
